--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
                             <div class="contact__card">
                                 <i class='bx bxl-gmail contact__card-icon'></i>
                                 <h3 class="contact__card-title">Email</h3>
-                                <span class="contact__card-data">kishoreeswar333@gmail.com</span>
+                                <span class="contact__card-data">aakashkanth69@gmail.com/span>
 
                                 <a href="mailto:kishoreeswar333@gmail.com" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
