--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Kishore Eswar</a>
+                <a href="#" class="nav__logo">Mithun Kumar L</a>
                 
                 <div class="nav__menu">
                     <ul class="nav__list">
@@ -72,11 +72,11 @@
                 <div class="home__container container grid">
                     <div class="home__data">
                         <span class="home__greeting">வணக்கம், I'm</span>
-                        <h1 class="home__name">Kishore Eswar</h1>
+                        <h1 class="home__name">Mithun Kumar L</h1>
                         <h3 class="home__education">Mechanical Designer</h3>
 
                         <div class="home__buttons">
-                            <a download="" href="pdf\KISHORE ESWAR resume.pdf" class="button button--ghost">
+                            <a download="" href="pdf\Mithun Kumar L resume.pdf" class="button button--ghost">
                                 Download Resume
                             </a>
                             <a href="#about" class="button">About me</a>
@@ -1108,7 +1108,7 @@
         <!--=============== FOOTER ===============-->
         <footer class="footer">
             <div class="footer__container container">
-                <h1 class="footer__title">Kishore Eswar</h1>
+                <h1 class="footer__title">Mithun Kumar L</h1>
 
                 <ul class="footer__list">
                     <li>
@@ -1139,7 +1139,7 @@
                 </ul>
 
                 <span class="footer__copy">
-                    &#169Kishore Eswar <br>All rights reserved <br> Since 2024
+                    &#169Mithun Kumar L <br>All rights reserved <br> Since 2024
                 </span>
 
             </div>
