--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="home__data">
                         <span class="home__greeting">வணக்கம், I'm</span>
                         <h1 class="home__name">Mithun Kumar L</h1>
-                        <h3 class="home__education">Mechanical Designer</h3>
+                        <h3 class="home__education"> R&D Mechanical Designer</h3>
 
                         <div class="home__buttons">
                             <a download="" href="pdf\Mithun Kumar L resume.pdf" class="button button--ghost">
