--- a/index.html
+++ b/index.html
@@ -1050,9 +1050,9 @@
                             <div class="contact__card">
                                 <i class='bx bxl-gmail contact__card-icon'></i>
                                 <h3 class="contact__card-title">Email</h3>
-                                <span class="contact__card-data">kishoreeswar333@gmail.com</span>
+                                <span class="contact__card-data">iammithun1998@gmail.com</span>
 
-                                <a href="mailto:kishoreeswar333@gmail.com" target="_blank" class="contact__button">
+                                <a href="mailto:iammithun1998@gmail.com" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                                 </a>
                             </div>
@@ -1060,7 +1060,7 @@
                             <div class="contact__card">
                                 <i class='bx bxl-whatsapp contact__card-icon' ></i>
                                 <h3 class="contact__card-title">Whatsapp</h3>
-                                <span class="contact__card-data">+91 7639489965</span>
+                                <span class="contact__card-data">+91 9740022041</span>
 
                                 <a href="https://api.whatsapp.com/send?phone=+917639489965&text=Hello,message from your website!" target="_blank" class="contact__button">
                                     Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
