--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="css/styles.css">
 
-        <title> Kishore </title>
+        <title> Mithun </title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
