--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="home section" id="home">
                 <div class="home__container container grid">
                     <div class="home__data">
-                        <span class="home__greeting">வணக்கம், I'm</span>
+                        <span class="home__greeting"> I'm</span>
                         <h1 class="home__name">Mithun Kumar L</h1>
                         <h3 class="home__education"> R&D Mechanical Designer</h3>
 
@@ -120,13 +120,13 @@
                             <div class="about__box">
                                 <i class='bx bxs-award about__icon'></i>
                                 <h3 class="about__title">Experience</h3>
-                                <span class="about__subtitle">3+ Years Working</span>
+                                <span class="about__subtitle">7+ Years Working</span>
                             </div>
 
                             <div class="about__box">
                                 <i class='bx bx-briefcase-alt about__icon'></i>
                                 <h3 class="about__title">Created</h3>
-                                <span class="about__subtitle">10+ Projects</span>
+                                <span class="about__subtitle">65+ Projects</span>
                             </div>
 
                             <div class="about__box">
@@ -137,8 +137,10 @@
                         </div>
 
                      <p class="about__description">
-                        I believe, I have a good balance of technical, analytical and practical skills that means 
-                        "I am a strong candiate for this Mechanical engineer"
+                        "I possess a well-rounded combination of technical expertise,analytical thinking, and practical skills, 
+                        which makes me a strong candidate for the position of Mechanical Engineer. 
+                        My abilities enable me to approach challenges with precision and innovation, 
+                        ensuring effective solutions and consistent results."
                      </p>   
 
                      <a href="#contact" class="button">Contact Me</a>
