--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="css/styles.css">
 
-        <title> Mithun </title>
+        <title> Mithun Kumar L </title>
     </head>
     <body>
         <!--=============== HEADER ===============-->
@@ -71,7 +71,7 @@
             <section class="home section" id="home">
                 <div class="home__container container grid">
                     <div class="home__data">
-                        <span class="home__greeting"> I'm</span>
+                        <span class="home__greeting">I'm</span>
                         <h1 class="home__name">Mithun Kumar L</h1>
                         <h3 class="home__education"> R&D Mechanical Designer</h3>
 
@@ -192,7 +192,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">Windchill</h3>
+                                        <h3 class="skills__name">PDM</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
@@ -201,7 +201,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">Agile</h3>
+                                        <h3 class="skills__name">GDP</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
