--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                                     <div>
                                         <h3 class="skills__name">Solidworks</h3>
-                                        <span class="skills__level">Intermediate</span>
+                                        <span class="skills__level">Advanced</span>
                                     </div>
                                 </div>
 
@@ -181,8 +181,8 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">ANSYS</h3>
-                                        <span class="skills__level">Intermediate</span>
+                                        <h3 class="skills__name">AutoCAD</h3>
+                                        <span class="skills__level">Advanced</span>
                                     </div>
                                 </div>
                             </div>
@@ -192,8 +192,8 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">PDM</h3>
-                                        <span class="skills__level">Intermediate</span>
+                                        <h3 class="skills__name">Windchill</h3>
+                                        <span class="skills__level">Beginner</span>
                                     </div>
                                 </div>
 
@@ -201,7 +201,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">GDP</h3>
+                                        <h3 class="skills__name">PDM</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
@@ -228,7 +228,16 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">Arduino UNO</h3>
+                                        <h3 class="skills__name">GD&T</h3>
+                                        <span class="skills__level">Advanced</span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <i class='bx bxs-badge-check'></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Mechanical stackup analysis</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
@@ -237,17 +246,8 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">ESP 32</h3>
+                                        <h3 class="skills__name">ASME 14.5</h3>
                                         <span class="skills__level">Intermediate</span>
-                                    </div>
-                                </div>
-
-                                <div class="skills__data">
-                                    <i class='bx bxs-badge-check'></i>
-
-                                    <div>
-                                        <h3 class="skills__name">Proteus</h3>
-                                        <span class="skills__level">Basics</span>
                                     </div>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">Illustrator</h3>
+                                        <h3 class="skills__name">FMEA</h3>
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">Photoshop</h3>
+                                        <h3 class="skills__name">CAPA</h3>
                                         <span class="skills__level">Basics</span>
                                     </div>
                                 </div>
@@ -275,7 +275,7 @@
                                     <i class='bx bxs-badge-check'></i>
 
                                     <div>
-                                        <h3 class="skills__name">After Effects</h3>
+                                        <h3 class="skills__name">Gage R&R</h3>
                                         <span class="skills__level">Basics</span>
                                     </div>
                                 </div>
