--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
                 <div class="services__container container grid">
                     <div class="services__card">
-                        <h3 class="services__title">Product <br> Designer</h3>
+                        <h3 class="services__title">New Product Developer <br> and Design</h3>
 
                         <span class="services__button">
                             See more<i class='bx bx-key services__icon'></i>
@@ -304,9 +304,9 @@
                             <div class="services__modal-content">
                                 <i class='bx bx-lock services__modal-close'></i>
 
-                                <h3 class="services__modal-title">Product Designer</h3>
+                                <h3 class="services__modal-title">New Product Developer and Design</h3>
                                 <p class="services__modal-description">
-                                    Service with more than 3+ years of experience.
+                                    Service with more than 5+ years of experience.
                                     Providing quality work with,
                                 </p>
 
@@ -351,7 +351,7 @@
                     </div>
 
                     <div class="services__card">
-                        <h3 class="services__title">Embedded Systems <br> Developer</h3>
+                        <h3 class="services__title">Cost analysis</h3>
 
                         <span class="services__button">
                             See more<i class='bx bx-key services__icon'></i>
@@ -361,9 +361,9 @@
                             <div class="services__modal-content">
                                 <i class='bx bx-lock services__modal-close'></i>
 
-                                <h3 class="services__modal-title">Embedded Systems Developer</h3>
+                                <h3 class="services__modal-title">Cost analysis</h3>
                                 <p class="services__modal-description">
-                                    Service with more than 3+ years of experience.
+                                    Service with more than 4+ years of experience.
                                     Providing quality work with,
                                 </p>
 
@@ -371,35 +371,35 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Specialize in efficient embedded system architecture.
+                                            Provide cost breakdown analysis and risk assessments to facilitate strategic decision-making.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Proficient in microcontroller programming and circuit design for optimized performance.
+                                            Support design-to-cost and design-for-manufacturing initiatives by working closely with design.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Prioritize real-time operating systems and IoT integration.
+                                            Prepare reports and presentations on cost analysis findings and recommendations for management.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Focus on rigorous testing, validation, and security measures for reliability.
+                                            cost validation with cross-functional teams.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Actively contribute to cutting-edge developments through continuous adaptation to new technologies.
+                                            Accurately estimating costs for tool design, materials, and production processes.
                                         </p>
                                     </li>
                                 </ul>
@@ -408,7 +408,7 @@
                     </div>
 
                     <div class="services__card">
-                        <h3 class="services__title">Motion Graphics <br> Illustrator</h3>
+                        <h3 class="services__title">Program <br> Management</h3>
 
                         <span class="services__button">
                             See more<i class='bx bx-key services__icon'></i>
@@ -418,9 +418,9 @@
                             <div class="services__modal-content">
                                 <i class='bx bx-lock services__modal-close'></i>
 
-                                <h3 class="services__modal-title">Motion Graphics Illustrator</h3>
+                                <h3 class="services__modal-title">Program Management</h3>
                                 <p class="services__modal-description">
-                                    Service with more than 3+ years of experience.
+                                    Service with more than 2+ years of experience.
                                     Providing quality work with,
                                 </p>
 
@@ -428,35 +428,35 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Merging static and dynamic visuals for compelling narratives.
+                                            Preparation of Project plan, Gantt chart and Time line by using MS project tool.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Contributing to diverse projects: UI, education, logos, and social media.
+                                             Establish collaborative working relationships with team members to achieve project <br> success, stakeholder satisfaction and operational excellence.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Applying a versatile style for impactful presentations and advertising.
+                                            Track milestones of projects and provide regular status reports to the management.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Aiming for memorable and impactful information across platforms.
+                                            Be responsible and have ownership of compliance of all projects until projects handed over to production.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-lock-open services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Specializing in visually engaging content for various industries.
+                                            Presently handling Devicor program.
                                         </p>
                                     </li>
                                 </ul>
