--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@
 
                 <div class="work__filters">
                     <span class="work__item active-work" data-filter='all'>All</span>
-                    <span class="work__item" data-filter='.product_design'>Product design</span>
-                    <span class="work__item" data-filter='.embedded_projects'>Embedded projects</span>
-                    <span class="work__item" data-filter='.illustrations'>Illustrations</span>
+                    <span class="work__item" data-filter='.product_design'>New Product Developer & Design</span>
+                    <span class="work__item" data-filter='.embedded_projects'>Cost analysis</span>
+                    <span class="work__item" data-filter='.illustrations'>Program Management</span>
                 </div>
 
                 <div class="work__container container grid">
