--- a/index.html
+++ b/index.html
@@ -497,6 +497,23 @@
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
                         </span>
 
+                           <!-- Modal -->
+    <div class="services__modal">
+        <div class="services__modal-content">
+            <i class='bx bxs-chevrons-left services__modal-close'></i>
+
+            <h3 class="services__modal-title">Hand Gesture Scroll Control</h3>
+
+            <!-- ✅ Video Preview Here -->
+            <video controls class="services__video" style="width: 100%; border-radius: 10px; margin-top: 1rem;">
+                <source src="https://www.youtube.com/watch?v=JUXjQ-1CJSE" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+</div>
+                        </span>
+
                         <div class="services__modal">
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
