--- a/index.html
+++ b/index.html
@@ -560,6 +560,11 @@
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
                         </span>
 
+                                    <!-- Modal -->
+            <div class="services__modal">
+                <div class="services__modal-content">
+                    <i class='bx bxs-chevrons-left services__modal-close'></i>
+
                         <div class="services__modal">
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
@@ -602,9 +607,19 @@
                                         </p>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
+                                
+                                                    <!-- YouTube Video Embed -->
+                    <div class="video-container" style="margin-top: 1.5rem;">
+                        <iframe width="100%" height="315"
+                            src="https://www.youtube.com/embed/JUXjQ-1CJSE"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
                     <div class="work__card mix product_design">
                         <img src="Img/Speed  shift.png"  alt="" class="work__img">
