--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <div class="work__container container grid">
         <!-- Sample Card -->
         <div class="work__card mix embedded_projects">
-            <img src="img/working-image.jpg" alt="" class="work__img">
+            <img src="Img/working image.jpg" alt="" class="work__img">
             
             <h3 class="work__title">Loading...</h3>
             
