--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
     </div>
 
                     <div class="work__card mix product_design">
-                        <img src="Img/KINCISE-Hero.jpeg"  alt="" class="work__img">
-                        <h3 class="services__title">KINCISE  -JnJ</h3>
+                        <img src="Img/Suction Irrigation Assembly.PNG"  alt="" class="work__img">
+                        <h3 class="services__title">SUCTION IRRIGATION ASSY</h3>
 
                         <span class="services__button">
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
@@ -569,27 +569,27 @@
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
-                                <h3 class="services__modal-title">KINCISE - JnJ</h3>
+                                <h3 class="services__modal-title">SUCTION IRRIGATION ASSY</h3>
                                 
                                 <ul class="services__modal-list">
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Innovating on KINCISE with advanced materials and improved functionalities for precision in surgeries.
+                                            Conceptualization & Requirement Gathering, Collaborated with cross-functional teams.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Conducting rigorous research, development, and testing to ensure quality and safety standards are met.
+                                            Developed CAD models and engineering drawings using tool SolidWorks.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Documenting unique features and filing for intellectual property protection.
+                                            Built functional prototypes using 3D printing and CNC machining.
                                         </p>
                                     </li>
 
@@ -603,7 +603,14 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Undertaking clinical trials to validate efficacy, safety, and usability before market launch.
+                                            Prepared and maintained DMR (Design Master Record), DHF (Design History File), and risk analysis per ISO 13485 & FDA.
+                                        </p>
+                                    </li>
+                                    
+                                    <li class="services__modal-item">
+                                        <i class='bx bx-chevron-right services__modal-icon'></i>
+                                        <p class="services__modal-info">
+                                            Prepared and maintained DMR (Design Master Record), DHF (Design History File), and risk analysis per ISO 13485 & FDA.
                                         </p>
                                     </li>
                                 </ul>
