--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 
     
                     <div class="work__card mix product_design">
-                        <img src="Img/Speed  shift.png"  alt="" class="work__img">
+                        <img src="Img/Mold Design.PNG"  alt="" class="work__img">
                         <h3 class="services__title">TOOL ENGINEERING</h3>
 
                         <span class="services__button">
@@ -633,35 +633,35 @@
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Investigating and analyzing the complaints filed against the current version of SPEED Shift to understand the specific issues raised by users or stakeholders.
+                                            Prepare RFQs (Request for Quotation) and evaluate supplier capabilities.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Identifying the root causes of the complaints to determine areas of improvement and inform the development of the new version.
+                                            Plan and conduct tool trials and validations. Analyze trial results and modify tools to meet desired performance.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Developing a strategic plan to address the identified issues and enhance the functionality, usability, and safety of SPEED Shift in the new version.
+                                            Track tool development against project milestones. Escalate delays and implement recovery plans if needed.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Ensuring that the new version of SPEED Shift complies with regulatory standards and requirements, including any necessary updates based on feedback and complaints.
+                                            Provide accurate tool cost estimations during project planning. Ensure tool development stays within budget.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Implementing a culture of continuous improvement by leveraging feedback from complaints to drive iterative enhancements in the new version of SPEED Shift, ensuring ongoing optimization and user satisfaction.
+                                            Maintain documentation like tool history, modifications, and technical specs.
                                         </p>
                                     </li>
                                 </ul>
