--- a/index.html
+++ b/index.html
@@ -724,9 +724,9 @@
                         </div>
                     </div>
 
-                    <div class="work__card mix illustrations">
+                    <div class="work__card mix product_design">
                         <img src="Img/complete company.png"  alt="" class="work__img">
-                        <h3 class="services__title">EcoBite Cutlery Works</h3>
+                        <h3 class="services__title">PHARMA MEDICAL PACKING SPM DESIGN</h3>
 
                         <span class="services__button">
                             Preview<i class='bx bxs-chevrons-right services__icon'></i>
@@ -736,41 +736,41 @@
                             <div class="services__modal-content">
                                 <i class='bx bxs-chevrons-left services__modal-close'></i>
 
-                                <h3 class="services__modal-title">EcoBite Cutlery Works</h3>
+                                <h3 class="services__modal-title">PHARMA MEDICAL PACKING SPM DESIGN</h3>
                                 
                                 <ul class="services__modal-list">
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Materials enter the factory.
+                                            Analyze cycle time, and volume requirements. Study component drawings and process flow.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Robotic arms align the materials.
+                                            Input from process, quality, and production teams. Define accuracy, repeatability, and machine tolerance limits. Identify ergonomic, safety, and environmental requirements.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Materials are processed into flour.
+                                            Design for rigidity, low vibration, and accessibility. Provision for tool change, part loading/unloading mechanisms.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Flour is used for molding spoons.
+                                            Use of standard components for ease of maintenance. Modular design for future upgradability.
                                         </p>
                                     </li>
 
                                     <li class="services__modal-item">
                                         <i class='bx bx-chevron-right services__modal-icon'></i>
                                         <p class="services__modal-info">
-                                            Flour is also used for molding cups.
+                                            Provide design files, BOM, circuit diagrams, and manuals.Training for operators and maintenance staff.
                                         </p>
                                     </li>
                                 </ul>
