--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                     </div>
 
                     <div class="work__card mix product_design">
-                        <img src="Img/complete company.png"  alt="" class="work__img">
+                        <img src="Img/PHARMA MEDICAL PACKING SPM DESIGN.PNG"  alt="" class="work__img">
                         <h3 class="services__title">PHARMA MEDICAL PACKING SPM DESIGN</h3>
 
                         <span class="services__button">
